syntax = "proto3";

package ex_gate;

message BalancesRequest {
  string exchange_name = 1;
}

message Balance {
  string asset = 1;
  string free = 2;
  string locked = 3;
}

message BalancesReply {
  repeated Balance balances = 1;
}

service Greeter {
  rpc GetBalances (BalancesRequest) returns (BalancesReply) {}
}

// "balances": [
//     {
//       "asset": "BTC",
//       "free": "4723846.89208129",
//       "locked": "0.00000000"
//     },
//     {
//       "asset": "LTC",
//       "free": "4763368.68006011",
//       "locked": "0.00000000"
//     }
//   ]
